--- a/src/main/resources/templates/order/service-type/service-type.html
+++ b/src/main/resources/templates/order/service-type/service-type.html
@@ -3,30 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>Service types</title>
+  <link th:replace="~{general.html :: b-css}">
+  <script th:replace="~{general.html :: b-js}"></script>
 </head>
 <body>
 <div th:insert="~{general.html :: navbar}"></div>
-<a href="/add-service-type">Add service type</a>
+<div class="container-xxl w-25">
+  <div class="row g-3 d-flex justify-content-center">
+    <h2 class="text-center">Service types</h2>
+    <div class="col-sm-12 mb-3">
+      <form action="#" th:action="@{/save-service-type}" th:object="${serviceType}" method="post">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="New service type" th:field="*{name}">
+          <button class="btn btn-outline-primary" type="submit">Save</button>
+          <p th:if="${#fields.hasErrors('name')}" th:errorclass="error" th:errors="*{name}"></p>
+        </div>
+      </form>
+    </div>
 <table>
-  <thead>
-  <tr>
-    <th>Service type</th>
-    <th>Action</th>
-  </tr>
-  </thead>
   <tbody>
   <tr th:each="serviceType : ${serviceTypes}">
-    <td th:text="${serviceType.name}"></td>
     <td>
-      <a th:href="@{/update-service-type?id={id}(id=${serviceType.serviceTypeId})}">Update</a>
-      <a th:attr="onclick=|confirmDelete('${serviceType.serviceTypeId}')|"
-         href="#">Delete</a>
+      <form action="#" th:action="@{/save-service-type}" th:object="${serviceType}" method="post">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" th:id="field-+${serviceType.id}" name="name" th:value="${serviceType.name}"
+               disabled>
+        <a class="btn btn-outline-success" type="button" th:attr="onclick=|openUpdate('${serviceType.id}')|">Update</a>
+        <a th:id="field-+${serviceType.id}+-close" class="btn btn-outline-danger" type="button" style="display:none"
+           th:attr="onclick=|closeUpdate('${serviceType.id}')|">X</a>
+        <a class="btn btn-outline-danger" type="button" th:attr="onclick=|confirmDelete('${serviceType.id}')|" href="#">Delete</a>
+      </div>
+      </form>
     </td>
   </tr>
   </tbody>
 </table>
-<a style="cursor: pointer; color: blue" href="/orders">Back</a>
+    <a class="btn btn-outline-secondary" href="/orders">Back</a>
+  </div>
+</div>
 <script>
+  function openUpdate(id) {
+    let inputField = document.getElementById('field-' + id);
+    let closeBtn = document.getElementById('field-' + id + '-close');
+    let isDisabled = inputField.disabled;
+    if (isDisabled === true) {
+      inputField.removeAttribute('disabled');
+      closeBtn.style.display = 'block';
+    }
+  }
+
+  function closeUpdate(id) {
+    document.getElementById('field-' + id).setAttribute('disabled','disabled');
+    document.getElementById('field-' + id + '-close').style.display = 'none';
+  }
+
   function confirmDelete(id) {
     let text = "Are you sure you want to delete?";
     let link = "/delete-service-type?id=" + id;
