--- a/src/main/resources/templates/general.html
+++ b/src/main/resources/templates/general.html
@@ -11,7 +11,7 @@
 <body>
 <nav class="container-md navbar navbar-expand-sm bg-body-tertiary mb-3" th:fragment="navbar">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Top</a>
+        <a class="navbar-brand" href="/">Top</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
