FIXED: Duplicate div around nav bar

--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-<div th:insert="~{general.html :: navbar}"></div>
+<div th:replace="~{general.html :: navbar}"></div>
 <div class="container-sm">
     <div>
         <a type="button" class="btn btn-outline-primary btn-sm" href="/add-employee">Add employee</a>
