--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-<div th:insert="~{general.html :: navbar}"></div>
+<div th:replace="~{general.html :: navbar}"></div>
 <div class="container-sm">
     <a class="btn btn-outline-primary btn-sm" href="/add-order">Add order</a>
     <a class="btn btn-outline-primary btn-sm" href="/service-types">Service types</a>
