--- a/src/main/resources/templates/order/service-type/service-type.html
+++ b/src/main/resources/templates/order/service-type/service-type.html
@@ -7,7 +7,7 @@
   <script th:replace="~{general.html :: b-js}"></script>
 </head>
 <body>
-<div th:insert="~{general.html :: navbar}"></div>
+<div th:replace="~{general.html :: navbar}"></div>
 <div class="container-xxl w-25">
   <div class="row g-3 d-flex justify-content-center">
     <h2 class="text-center">Service types</h2>
