--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-<div th:insert="~{general.html :: navbar}"></div>
+<div th:replace="~{general.html :: navbar}"></div>
 <div class="container-xxl">
   <div class="d-flex justify-content-center">
     <div class="border w-75 p-3">
