--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -18,7 +18,7 @@
 <body>
 <div th:replace="~{general.html :: navbar}"></div>
 <div class="container-sm">
-    <div>
+    <div class="mb-3">
         <a type="button" class="btn btn-outline-primary btn-sm" href="/add-employee">Add employee</a>
         <a class="btn btn-outline-primary btn-sm" href="/roles">Roles</a>
     </div>
