--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -2,7 +2,6 @@
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Employees</title>
     <link th:replace="~{general.html :: b-css}">
     <link th:replace="~{general.html :: fa-css}">
@@ -17,7 +16,7 @@
 </head>
 <body>
 <div th:replace="~{general.html :: navbar}"></div>
-<div class="container-sm">
+<div class="container">
     <div class="mb-3">
         <a class="btn btn-outline-primary btn-sm" href="/add-employee">Add employee</a>
         <a class="btn btn-outline-primary btn-sm" href="/roles">Roles</a>
