--- a/src/main/resources/templates/employee/role/role.html
+++ b/src/main/resources/templates/employee/role/role.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div th:replace="~{general.html :: navbar}"></div>
-<div class="container-xxl w-25">
-  <div class="row g-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
+  <div class="row g-3 d-flex flex-column align-items-center">
     <div>
       <h2 class="text-center">Roles</h2>
     </div>
