--- a/src/main/resources/templates/general.html
+++ b/src/main/resources/templates/general.html
@@ -9,7 +9,7 @@
     <script th:fragment="b-js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav class="container-md navbar navbar-expand-sm bg-body-tertiary mb-3" th:fragment="navbar">
+<nav class="container navbar navbar-expand-sm bg-body-tertiary mb-3" th:fragment="navbar">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Top</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
