--- a/src/main/resources/templates/order/service-type/service-type.html
+++ b/src/main/resources/templates/order/service-type/service-type.html
@@ -2,18 +2,19 @@
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Service types</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Service types</title>
   <link th:replace="~{general.html :: b-css}">
   <script th:replace="~{general.html :: b-js}"></script>
 </head>
 <body>
 <div th:replace="~{general.html :: navbar}"></div>
-<div class="container-xxl w-25">
-  <div class="row g-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
+  <div class="row g-3 d-flex flex-column align-items-center">
     <div>
       <h2 class="text-center">Service types</h2>
     </div>
-    <div class="col-sm-12 mb-3">
+    <div class="mb-3">
       <form action="#" th:action="@{/save-service-type}" th:object="${serviceType}" method="post">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="New service type" th:field="*{name}">
